kubernetes/overlays/prod/server.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
        - name: server
          imagePullPolicy: Always
